src/test/deca/context/invalid/affectation-wrongTypeAffectationIntFloat.context
affectation-wrongTypeAffectationIntFloat.deca:4: